--- a/style.css
+++ b/style.css
@@ -1,3 +1,107 @@
 h1{
-    font-size: 500px;
+    font-size: 50px;
 }
+body{
+    margin: 0; 
+    font-family:'Roboto', sans-serif;
+  }
+  h1{
+      font-size: 40px;
+  }
+  .name-color{
+      color: rgb(202, 6, 104);
+  }
+  .helf-width{
+      width: 38%;
+      float: left;
+      margin-top: 10%;
+      margin-left: 10%;
+      
+  }
+  .helf-width img{
+      width: 100%;
+      
+  }
+  .link-button{
+      text-decoration: none;
+      background-color: rgb(202, 6, 104);
+      padding: 15px 50px;
+      color: white;
+      border-radius: 5px;
+  }
+  section{
+      height: 500px;
+      padding-bottom: 250px;
+  }
+  .header-section{
+      background-image: url(images/header-bg.png);
+      background-position: center;
+      
+  }
+  .biography-section{
+      background-image: url(images/biography-bg.png);
+      background-position: center;
+  }
+  #padding{
+      padding-top: 100px;
+      
+  }
+  #padding-two{
+      padding-top: 100px;
+  }
+  .work-image{
+      width: 19%;
+      float: left;
+      margin-left: 10%;
+  }
+  .work-image img{
+      width:350px;
+      height:250px;
+  
+  }
+  #headding{
+      text-align: center;
+  }
+  #low-height{
+      height:200px;
+  }
+  .latestwork-section{
+      background-image: url(images/latest-work-bg.png);
+      padding-top: 130px;
+      padding-bottom: 500px;
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 100%;
+  }
+  .client-headder{
+      text-align: center;
+      font-size: 40px;
+  }
+  
+  .last-section{
+      background-image: url(images/footer-bg.png);
+      background-position: left;
+      background-repeat: no-repeat;
+      width: 100%;
+      padding-top: 0;
+  }
+  .center{
+      text-align: center;
+      
+  }
+  .text-size{
+      font-size: 20px;
+  }
+  #contact{
+      font-size: 30px;
+      background-image: linear-gradient( rgb(253, 61, 196)
+      , rgb(240, 52, 146));
+      text-decoration: none;
+      color: white;
+      padding: 100px 50px;
+      border-radius: 10px;  
+  }
+  .subtext{
+      color: rgb(61, 59, 60);
+  }
